--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,12 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+
+# custom settings for africart togo
+robots_allow: false # true : allow robots indexing and points to sitemap
+                   # false : Disallow robots indexing
+                   # see robot.txt for more infos
+
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -182,6 +188,7 @@ exclude:
   - package.json
   - Rakefile
   - README
+  - staticman.yml
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
