--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ name                     : "Your Name"
 description              : "Visitez le musée de l'association MUSEE AFRICART TOGO"
 url                      : https://musee-africart-togo.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : https://github.com/africart/musee-africart-togo.com # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : africart/musee-africart-togo.com # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /img/logo-africart-2-bgrouille.jpg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 
 # custom settings for africart togo
