--- a/_config.yml
+++ b/_config.yml
@@ -264,3 +264,9 @@ liquid:
   strict_variables: false # default: false
   strict_filters: true # default: false
   error_mode: strict # default: warn
+
+
+# include debug
+# sets html comment at include start and end
+comment_includes: true
+
