--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Accueil"
-    url: /
-  - title: "Musée"
-    url: /musee/
-  - title: "Notre Association"
-    url: /association/
-  - title: "Nos services"
-    url: /services/
-  - title: "Blog"
-    url: /blog/
+  # - title: "Accueil"
+  #   url: /
+  # - title: "Musée"
+  #   url: /musee/
+  # - title: "Notre Association"
+  #   url: /association/
+  # - title: "Nos services"
+  #   url: /services/
+  # - title: "Blog"
+  #   url: /blog/
