--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : africart/musee-africart-togo.com # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /img/musee-africart-kara-togo-masques-fallback-teaset-500x300.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /img/logo-musee-africart-kara-togo-kwele-optimized-omgsvg.gif # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Musée AFRICART Kara, Togo" # overrides the website title displayed in the masthead, use " " for no title
 
 # custom settings for africart togo
 robots_allow: false # true : allow robots indexing and points to sitemap
@@ -193,7 +193,7 @@ sass:
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+paginate_path: "/blog/page:num/"
 timezone: "Africa/Lome" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
