--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -140,7 +140,7 @@ fr: &DEFAULT_FR
   more_label                 : "Lire plus"
   related_label              : "Vous pourriez aimer aussi"
   follow_label               : "Contact"
-  feed_label                 : "Flux"
+  feed_label                 : "Flux RSS"
   powered_by                 : "Propulsé par"
   website_label              : "Site"
   email_label                : "Email"
