--- a/admin/config.yml
+++ b/admin/config.yml
@@ -9,7 +9,7 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "img" # Media files will be stored in the repo under images/uploads
 
 collections:
 
