--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@
 
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: develop # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
 
