--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,11 +5,11 @@
 
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: develop # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
 
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "img" # Media files will be stored in the repo under images/uploads
 
 collections:
 
