--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,6 +33,7 @@ collections:
     format: frontmatter
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Excerpt", name: "excerpt", widget: "markdown"}
       - {label: "Body", name: "body", widget: "markdown"}
 
       - label: "Tags"
@@ -51,9 +52,4 @@ collections:
           - {label: "Transparence de masque", name: overlay_filter, widget: hidden, default: "0."}
           - {label: "Image", name: overlay_image, widget: image, default: false, required: false}
           - {label: "Caption", name: caption, widget: string, default: "", required: false}
-          - label: Bouton d'action
-            name: actions
-            widget: object
-            fields:
-              - {label: Label, name: label, widget: string, default: ""}
-              - {label: Url, name: url, widget: string, default: "/"}
+
