--- a/_config.yml
+++ b/_config.yml
@@ -76,9 +76,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : google # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : UA-145160575-1
     anonymize_ip         : # true, false (default)
 
 
