--- a/_config.yml
+++ b/_config.yml
@@ -259,6 +259,7 @@ defaults:
       comments: false
       share: true
       related: true
+      published: false
   # _pages
   - scope:
       path: "_pages"
