--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,8 +8,7 @@
 backend:
   name: git-gateway
   accept_roles: #optional - accepts all users if left out
-    - admin
-    - editor
+    - develop
   branch: master # Branch to update (optional; defaults to master)
 
 # publish_mode: editorial_workflow
