--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Africart kara"
+  name             : "Africart Kara"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : ""
   location         : ""
