--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,8 +10,7 @@
 backend:
   name: git-gateway
   accept_roles: #optional - accepts all users if left out
-    - dev
-  branch: master # Branch to update (optional; defaults to master)
+  branch: dev # Branch to update (optional; defaults to master)
 
 # publish_mode: editorial_workflow
 
