cms config using MM features helpers from within cms

--- a/_includes/cms-admin/feature.yml
+++ b/_includes/cms-admin/feature.yml
@@ -1,5 +1,5 @@
-      - label: "Features"
-        name: Features
+      - label: "Feature"
+        name: Feature
         required: false
         widget: "object"
         fields:
@@ -7,25 +7,41 @@
             name: image_path
             widget: image
             default: "#000"
+            required: false
+
           - label: "Texte image"
             name: image_caption
             widget: text
             default: "Image {{ site.title }}"
+            required: false
+
           - label: "Text alternatif image"
             name: alt
             widget: text
+            required: false
+
           - label: "Titre"
             name: title
             widget: text
+            required: false
+
           - label: "Intro"
             name: excerpt
             widget: markdown
+            required: false
+
           - label: "URL bouton"
             name: url
             widget: text
+            required: false
+
           - label: "Texte bouton"
             name: btn_label
             widget: text
+            required: false
+
           - label: "Style bouton"
             name: btn_class
             widget: text
+            required: false
+
