--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,7 +27,7 @@ collections:
     label: "Blog" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{% raw %}{{year}}-{{month}}-{{day}}-{{slug}}{% endraw %}" # Filename template, e.g., YYYY-MM-DD-title.md
     delete: false # prevents users from deleting items in a collection; defaults to true
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
@@ -56,7 +56,7 @@ collections:
     label: "Pages" # Used in the UI
     folder: "_pages" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{% raw %}{{slug}}{% endraw %}" # Filename template, e.g., YYYY-MM-DD-title.md
     delete: false # prevents users from deleting items in a collection; defaults to true
     fields:
       - label: "Title"
@@ -77,61 +77,7 @@ collections:
         widget: "string"
         required: false
 
-{% comment %}
+{% comment %}{% endcomment %}
 {% include cms-admin/header.yml %}
-{% endcomment %}
-
-      - label: "Bloc de texte"
-        name: "features"
-        widget: "list"
-        fields:
-
-          - label: "Type"
-            name: type
-            hint: "left, center or right"
-            widget: string
-            default: "left"
-
-          - label: "Image"
-            name: image_path
-            widget: image
-            default: "{{ site.logo }}"
-            required: false
-
-          - label: "Texte image"
-            name: image_caption
-            widget: text
-            default: "Image {{ site.title }}"
-            required: false
-
-          - label: "Text alternatif image"
-            name: alt
-            widget: text
-            required: false
-
-          - label: "Titre"
-            name: title
-            widget: text
-            required: false
-
-          - label: "Intro"
-            name: excerpt
-            widget: markdown
-            required: false
-
-          - label: "URL bouton"
-            name: url
-            widget: text
-            required: false
-
-          - label: "Texte bouton"
-            name: btn_label
-            widget: text
-            required: false
-
-          - label: "Style bouton"
-            name: btn_class
-            widget: text
-            required: false
-
+{% include cms-admin/features.yml %}
 
