--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ cloudinary:
   presets:
     default:
       min_width: 320
-      max_width: 1600
-      fallback_max_width: 800
-      steps: 5
-      sizes: "(min-width: 50rem) 50rem, 90vw"
+      max_width: 800
+      fallback_max#_width: 600
+      steps: 3
+#      sizes: "(min-width: 50rem) 50rem, 90vw"
