Changing url for dev branch deploys + netlify.toml config

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -4,7 +4,7 @@
 # which you are expected to set up once and rarely need to edit after that.
 
 
-url : https://serene-poitras-96eab5.netlify.com
+url : https://dev--africart.netlify.com/
 
 # liquid debug
 liquid:
