netlify.toml headers update

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,10 @@
 
 [context.branch-deploy]
   command = "jekyll build --config _config.yml,_config_dev.yml"
+
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
