--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ paginate_path: "/blog/page:num/"
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-gist
+#  - jekyll-gist
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
